Fix footnotes using the wrong list style, add support for aligned pictures

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,3 +106,15 @@
     width: 1.1875em; }
   .svg-inline--fa.fa-w-20 {
     width: 1.25em; }
+
+.align-right {
+  float: right;
+  margin: 14px 0;
+  padding-left: 30px;
+}
+
+.align-left {
+  float: left;
+  margin: 14px 0;
+  padding-right: 30px;
+}
